--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Predicting Voter Turnout Based on Election Infrastructure and Policy
 description: 
 google_analytics: 
 show_downloads: true
-theme: jekyll-theme-modernist
+theme: jekyll-theme-minimal
 
 gems:
   - jekyll-mentions
