--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Predicting Voter Turnout Based on Election Infrastructure and Policy
+title:
 description: 
 google_analytics: 
 show_downloads: true
