--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
-plugins:
-  - jekyll-relative-links
-relative_links:
-  enabled: true
-  collections: true
-include:
-  - README.md
+title: Project title: Movie Revenue Prediction
+description: 
+google_analytics: 
+show_downloads: true
+theme: jekyll-theme-cayman
+
+gems:
+  - jekyll-mentions
