--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Project title: Movie Revenue Prediction
+title: Movie Revenue Prediction
 description: 
 google_analytics: 
 show_downloads: true
